--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@popperjs/core": "^2.10.1",
     "@symfony/webpack-encore": "^1.6.1",
     "bootstrap": "^5.1.1",
     "file-loader": "^6.2.0",
