--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@popperjs/core": "^2.10.1",
     "@symfony/webpack-encore": "^1.6.1",
     "bootstrap": "^5.1.1",
+    "core-js": "^3.18.2",
     "file-loader": "^6.2.0",
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
