--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bsfr-website",
   "displayName": "BSFR Website",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "BSFR Website",
   "main": "app.js",
   "scripts": {
@@ -14,12 +14,15 @@
   "author": "BSFR",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^4.1.2",
     "cookie-session": "^2.0.0",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
-    "mariadb": "^3.0.0",
-    "node-fetch": "^2.6.1",
-    "sequelize": "^6.20.1"
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "mariadb": "^3.0.1",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^2.6.7",
+    "sequelize": "^6.21.4",
+    "webdav": "^4.11.0"
   }
 }
