--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "cookie-session": "^2.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "mariadb": "^3.0.1",
-    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.7",
-    "sequelize": "^6.21.4",
-    "webdav": "^4.11.0"
+    "sequelize": "^6.21.4"
   }
 }
