--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bsfr-website",
   "displayName": "BSFR Website",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "BSFR Website",
   "main": "app.js",
   "scripts": {
@@ -15,10 +15,11 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
-    "cookie-session": "^2.0.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "express-mysql-session": "^2.1.8",
+    "express-session": "^1.17.3",
     "mariadb": "^3.0.1",
     "node-fetch": "^2.6.7",
     "sequelize": "^6.21.4"
