--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "bsfr-website",
   "displayName": "BSFR Website",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "description": "BSFR Website",
   "main": "app.js",
+  "type": "module",
   "scripts": {
     "run": "node app.js"
   },
@@ -14,14 +15,14 @@
   "author": "BSFR",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.1.2",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
     "mariadb": "^3.0.1",
-    "node-fetch": "^2.6.7",
-    "sequelize": "^6.21.4"
+    "node-fetch": "^3.2.10",
+    "sequelize": "^6.25.3"
   }
 }
