--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-fileupload": "^1.4.0",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
+    "jsdom": "^21.0.0",
     "mariadb": "^3.0.2",
     "node-fetch": "^3.3.0",
     "sequelize": "^6.25.7"
