Ajout de variables pour la connexion à l'API OSC de Nextcloud

--- a/config.json
+++ b/config.json
@@ -16,6 +16,13 @@
             "Modérateur": ""
         }
     },
+    "nextcloud": {
+        "osc": {
+            "share": ""
+        },
+        "username": "",
+        "password": ""
+    },
     "database": {
         "host": "localhost",
         "port": 3306,
