--- a/package.json
+++ b/package.json
@@ -15,16 +15,24 @@
   "author": "BSFR",
   "license": "ISC",
   "dependencies": {
+    "@picmo/popup-picker": "^5.8.5",
+    "@picmo/renderer-twemoji": "^5.8.5",
     "chalk": "^5.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
+    "fluent-ffmpeg": "^2.1.2",
     "jsdom": "^21.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.1.1",
     "mmmagic": "^0.5.3",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.1",
-    "sequelize": "^6.30.0"
+    "picmo": "^5.8.5",
+    "sequelize": "^6.30.0",
+    "tmp": "^0.2.1",
+    "yauzl": "^2.10.0"
   }
 }
