--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@picmo/popup-picker": "^5.8.5",
     "@picmo/renderer-twemoji": "^5.8.5",
     "chalk": "^5.2.0",
+    "cron": "^2.4.4",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
