--- a/package.json
+++ b/package.json
@@ -15,24 +15,21 @@
   "author": "BSFR",
   "license": "ISC",
   "dependencies": {
-    "@picmo/popup-picker": "^5.8.5",
-    "@picmo/renderer-twemoji": "^5.8.5",
-    "chalk": "^5.2.0",
-    "cron": "^2.4.4",
+    "canvas": "^2.11.2",
+    "chalk": "^5.3.0",
+    "cron": "^3.1.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
+    "express-fileupload": "^1.4.2",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "fluent-ffmpeg": "^2.1.2",
-    "jsdom": "^21.1.1",
+    "jsdom": "^22.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.1.1",
+    "mariadb": "^3.2.2",
     "mmmagic": "^0.5.3",
     "node-cache": "^5.1.2",
-    "node-fetch": "^3.3.1",
-    "picmo": "^5.8.5",
-    "sequelize": "^6.30.0",
+    "sequelize": "^6.33.0",
     "tmp": "^0.2.1",
     "yauzl": "^2.10.0"
   }
