--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
     "cron": "^3.1.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.2",
+    "express-fileupload": "^1.4.3",
     "express-mysql-session": "^3.0.0",
     "express-session": "^1.17.3",
     "fluent-ffmpeg": "^2.1.2",
-    "jsdom": "^22.1.0",
+    "jsdom": "^23.0.1",
     "jsonwebtoken": "^9.0.2",
-    "mariadb": "^3.2.2",
+    "mariadb": "^3.2.3",
     "mmmagic": "^0.5.3",
     "node-cache": "^5.1.2",
-    "sequelize": "^6.33.0",
+    "sequelize": "^6.35.2",
+    "sharp": "^0.33.1",
     "tmp": "^0.2.1",
     "yauzl": "^2.10.0"
   }
