--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "BSFR Website",
   "main": "app.js",
   "type": "module",
+  "engines": {
+    "node": ">=20.11.0"
+  },
   "scripts": {
     "run": "node app.js"
   },
