--- a/angular.json
+++ b/angular.json
@@ -30,12 +30,7 @@
                             }
                         ],
                         "styles": ["src/styles.scss"],
-                        "scripts": [],
-                        "server": "src/main.server.ts",
-                        "prerender": true,
-                        "ssr": {
-                            "entry": "server.ts"
-                        }
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
@@ -77,10 +72,10 @@
                             "buildTarget": "frontend:build:development"
                         }
                     },
-                    "defaultConfiguration": "development",
                     "options": {
                         "proxyConfig": "src/proxy.conf.json"
-                    }
+                    },
+                    "defaultConfiguration": "development"
                 },
                 "extract-i18n": {
                     "builder": "@angular-devkit/build-angular:extract-i18n"
@@ -90,7 +85,6 @@
                     "options": {
                         "polyfills": ["zone.js", "zone.js/testing"],
                         "tsConfig": "tsconfig.spec.json",
-                        "inlineStyleLanguage": "scss",
                         "assets": [
                             {
                                 "glob": "**/*",
