--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@angular/ssr": "^18.0.7",
         "express": "^4.18.2",
         "feather-icons": "^4.29.2",
+        "ngx-cookie-service": "^18.0.0",
         "primeicons": "^7.0.0",
         "primeng": "^17.18.3",
         "rxjs": "~7.8.0",
