Mise en place de la carte interactive

--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,11 @@
                             {
                                 "glob": "**/*",
                                 "input": "public"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "./node_modules/leaflet/dist/images",
+                                "output": "assets/"
                             }
                         ],
                         "styles": ["src/styles.scss"],
@@ -89,6 +94,11 @@
                             {
                                 "glob": "**/*",
                                 "input": "public"
+                            },
+                            {
+                                "glob": "**/*",
+                                "input": "./node_modules/leaflet/dist/images",
+                                "output": "assets/"
                             }
                         ],
                         "styles": ["src/styles.scss"],
