--- a/package.json
+++ b/package.json
@@ -39,8 +39,11 @@
         "@angular/platform-server": "^18.0.0",
         "@angular/router": "^18.0.0",
         "@angular/ssr": "^18.0.7",
+        "@asymmetrik/ngx-leaflet": "^18.0.1",
+        "esri-leaflet-vector": "^4.2.3",
         "express": "^4.18.2",
         "feather-icons": "^4.29.2",
+        "leaflet": "^1.9.4",
         "ngx-cookie-service": "^18.0.0",
         "primeicons": "^7.0.0",
         "primeng": "^17.18.3",
@@ -55,6 +58,7 @@
         "@types/express": "^4.17.17",
         "@types/feather-icons": "^4.29.4",
         "@types/jasmine": "~5.1.0",
+        "@types/leaflet": "^1.9.12",
         "@types/node": "^18.18.0",
         "autoprefixer": "^10.4.19",
         "jasmine-core": "~5.1.0",
