Progression dans la refonte

--- a/package.json
+++ b/package.json
@@ -40,12 +40,15 @@
         "@angular/router": "^18.0.0",
         "@angular/ssr": "^18.0.7",
         "@asymmetrik/ngx-leaflet": "^18.0.1",
+        "@ngx-translate/core": "^15.0.0",
+        "@ngx-translate/http-loader": "^8.0.0",
         "esri-leaflet-vector": "^4.2.3",
         "express": "^4.18.2",
         "feather-icons": "^4.29.2",
         "leaflet": "^1.9.4",
+        "ngx-device-detector": "^8.0.0",
         "primeicons": "^7.0.0",
-        "primeng": "^17.18.3",
+        "primeng": "^17.18.7",
         "rxjs": "~7.8.0",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.3"
