--- a/package.json
+++ b/package.json
@@ -28,49 +28,49 @@
         ]
     },
     "dependencies": {
-        "@angular/animations": "^18.0.0",
-        "@angular/cdk": "^18.0.6",
-        "@angular/common": "^18.0.0",
-        "@angular/compiler": "^18.0.0",
-        "@angular/core": "^18.0.0",
-        "@angular/forms": "^18.0.0",
-        "@angular/platform-browser": "^18.0.0",
-        "@angular/platform-browser-dynamic": "^18.0.0",
-        "@angular/platform-server": "^18.0.0",
-        "@angular/router": "^18.0.0",
-        "@angular/ssr": "^18.0.7",
+        "@angular/animations": "^18.1.4",
+        "@angular/cdk": "^18.1.4",
+        "@angular/common": "^18.1.4",
+        "@angular/compiler": "^18.1.4",
+        "@angular/core": "^18.1.4",
+        "@angular/forms": "^18.1.4",
+        "@angular/platform-browser": "^18.1.4",
+        "@angular/platform-browser-dynamic": "^18.1.4",
+        "@angular/platform-server": "^18.1.4",
+        "@angular/router": "^18.1.4",
+        "@angular/ssr": "^18.1.4",
         "@asymmetrik/ngx-leaflet": "^18.0.1",
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
         "esri-leaflet-vector": "^4.2.3",
-        "express": "^4.18.2",
+        "express": "^4.19.2",
         "feather-icons": "^4.29.2",
         "leaflet": "^1.9.4",
         "ngx-device-detector": "^8.0.0",
         "primeicons": "^7.0.0",
-        "primeng": "^17.18.7",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
-        "zone.js": "~0.14.3"
+        "primeng": "^17.18.8",
+        "rxjs": "^7.8.1",
+        "tslib": "^2.6.3",
+        "zone.js": "^0.14.10"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.0.7",
-        "@angular/cli": "^18.0.7",
-        "@angular/compiler-cli": "^18.0.0",
-        "@types/express": "^4.17.17",
+        "@angular-devkit/build-angular": "^18.1.4",
+        "@angular/cli": "^18.1.4",
+        "@angular/compiler-cli": "^18.1.4",
+        "@types/express": "^4.17.21",
         "@types/feather-icons": "^4.29.4",
-        "@types/jasmine": "~5.1.0",
+        "@types/jasmine": "^5.1.4",
         "@types/leaflet": "^1.9.12",
-        "@types/node": "^18.18.0",
-        "autoprefixer": "^10.4.19",
-        "jasmine-core": "~5.1.0",
-        "karma": "~6.4.0",
-        "karma-chrome-launcher": "~3.2.0",
-        "karma-coverage": "~2.2.0",
-        "karma-jasmine": "~5.1.0",
-        "karma-jasmine-html-reporter": "~2.1.0",
-        "postcss": "^8.4.39",
-        "tailwindcss": "^3.4.4",
-        "typescript": "~5.4.2"
+        "@types/node": "^22.2.0",
+        "autoprefixer": "^10.4.20",
+        "jasmine-core": "^5.2.0",
+        "karma": "^6.4.4",
+        "karma-chrome-launcher": "^3.2.0",
+        "karma-coverage": "^2.2.1",
+        "karma-jasmine": "^5.1.0",
+        "karma-jasmine-html-reporter": "^2.1.0",
+        "postcss": "^8.4.41",
+        "tailwindcss": "^3.4.9",
+        "typescript": "^5.5.4"
     }
 }
