--- a/package.json
+++ b/package.json
@@ -28,40 +28,42 @@
         ]
     },
     "dependencies": {
-        "@angular/animations": "^18.1.4",
-        "@angular/cdk": "^18.1.4",
-        "@angular/common": "^18.1.4",
-        "@angular/compiler": "^18.1.4",
-        "@angular/core": "^18.1.4",
-        "@angular/forms": "^18.1.4",
-        "@angular/platform-browser": "^18.1.4",
-        "@angular/platform-browser-dynamic": "^18.1.4",
-        "@angular/platform-server": "^18.1.4",
-        "@angular/router": "^18.1.4",
-        "@angular/ssr": "^18.1.4",
+        "@angular/animations": "^18.2.1",
+        "@angular/cdk": "^18.2.1",
+        "@angular/common": "^18.2.1",
+        "@angular/compiler": "^18.2.1",
+        "@angular/core": "^18.2.1",
+        "@angular/forms": "^18.2.1",
+        "@angular/platform-browser": "^18.2.1",
+        "@angular/platform-browser-dynamic": "^18.2.1",
+        "@angular/platform-server": "^18.2.1",
+        "@angular/router": "^18.2.1",
+        "@angular/ssr": "^18.2.1",
         "@asymmetrik/ngx-leaflet": "^18.0.1",
         "@ngx-translate/core": "^15.0.0",
         "@ngx-translate/http-loader": "^8.0.0",
-        "esri-leaflet-vector": "^4.2.3",
+        "esri-leaflet-vector": "^4.2.4",
         "express": "^4.19.2",
         "feather-icons": "^4.29.2",
         "leaflet": "^1.9.4",
         "ngx-device-detector": "^8.0.0",
         "primeicons": "^7.0.0",
-        "primeng": "^17.18.8",
+        "primeng": "^17.18.9",
         "rxjs": "^7.8.1",
         "tslib": "^2.6.3",
         "zone.js": "^0.14.10"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.1.4",
-        "@angular/cli": "^18.1.4",
-        "@angular/compiler-cli": "^18.1.4",
+        "@angular-devkit/build-angular": "^18.2.1",
+        "@angular/cli": "^18.2.1",
+        "@angular/compiler-cli": "^18.2.1",
+        "@emoji-mart/data": "^1.2.1",
         "@types/express": "^4.17.21",
         "@types/feather-icons": "^4.29.4",
         "@types/jasmine": "^5.1.4",
         "@types/leaflet": "^1.9.12",
         "autoprefixer": "^10.4.20",
+        "emoji-mart": "^5.6.0",
         "jasmine-core": "^5.2.0",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
@@ -69,7 +71,7 @@
         "karma-jasmine": "^5.1.0",
         "karma-jasmine-html-reporter": "^2.1.0",
         "postcss": "^8.4.41",
-        "tailwindcss": "^3.4.9",
+        "tailwindcss": "^3.4.10",
         "typescript": "^5.5.4"
     }
 }
