--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "@types/leaflet": "^1.9.12",
         "autoprefixer": "^10.4.20",
         "emoji-mart": "^5.6.0",
+        "howler": "^2.2.4",
         "jasmine-core": "^5.2.0",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
