--- a/package.json
+++ b/package.json
@@ -28,51 +28,53 @@
         ]
     },
     "dependencies": {
-        "@angular/animations": "^18.2.1",
-        "@angular/cdk": "^18.2.1",
-        "@angular/common": "^18.2.1",
-        "@angular/compiler": "^18.2.1",
-        "@angular/core": "^18.2.1",
-        "@angular/forms": "^18.2.1",
-        "@angular/platform-browser": "^18.2.1",
-        "@angular/platform-browser-dynamic": "^18.2.1",
-        "@angular/platform-server": "^18.2.1",
-        "@angular/router": "^18.2.1",
-        "@angular/ssr": "^18.2.1",
+        "@angular/animations": "^18.2.10",
+        "@angular/cdk": "^18.2.11",
+        "@angular/common": "^18.2.10",
+        "@angular/compiler": "^18.2.10",
+        "@angular/core": "^18.2.10",
+        "@angular/forms": "^18.2.10",
+        "@angular/platform-browser": "^18.2.10",
+        "@angular/platform-browser-dynamic": "^18.2.10",
+        "@angular/platform-server": "^18.2.10",
+        "@angular/router": "^18.2.10",
+        "@angular/ssr": "^18.2.11",
         "@asymmetrik/ngx-leaflet": "^18.0.1",
-        "@ngx-translate/core": "^15.0.0",
-        "@ngx-translate/http-loader": "^8.0.0",
-        "esri-leaflet-vector": "^4.2.4",
+        "@ngx-translate/core": "^16.0.3",
+        "@ngx-translate/http-loader": "^16.0.0",
+        "@primeng/themes": "^18.0.0",
+        "esri-leaflet-vector": "^4.2.5",
         "express": "^4.19.2",
         "feather-icons": "^4.29.2",
         "leaflet": "^1.9.4",
         "ngx-device-detector": "^8.0.0",
         "primeicons": "^7.0.0",
-        "primeng": "^17.18.9",
+        "primeng": "^19.0.0",
         "rxjs": "^7.8.1",
-        "tslib": "^2.6.3",
+        "tailwindcss-primeui": "^0.3.4",
+        "tslib": "^2.8.1",
         "zone.js": "^0.14.10"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^18.2.1",
-        "@angular/cli": "^18.2.1",
-        "@angular/compiler-cli": "^18.2.1",
+        "@angular-devkit/build-angular": "^18.2.11",
+        "@angular/cli": "^18.2.11",
+        "@angular/compiler-cli": "^18.2.10",
         "@emoji-mart/data": "^1.2.1",
         "@types/express": "^4.17.21",
         "@types/feather-icons": "^4.29.4",
         "@types/jasmine": "^5.1.4",
-        "@types/leaflet": "^1.9.12",
+        "@types/leaflet": "^1.9.14",
         "autoprefixer": "^10.4.20",
         "emoji-mart": "^5.6.0",
         "howler": "^2.2.4",
-        "jasmine-core": "^5.2.0",
+        "jasmine-core": "^5.4.0",
         "karma": "^6.4.4",
         "karma-chrome-launcher": "^3.2.0",
         "karma-coverage": "^2.2.1",
         "karma-jasmine": "^5.1.0",
         "karma-jasmine-html-reporter": "^2.1.0",
-        "postcss": "^8.4.41",
-        "tailwindcss": "^3.4.10",
-        "typescript": "^5.5.4"
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.14",
+        "typescript": "5.5.4"
     }
 }
